--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "requirejs": "~2.1.8",
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
-    "handlebars.js": "~1.0.12"
+    "handlebars.js": "~1.0.12",
+    "momentjs": "~2.2.1"
   },
   "devDependencies": {}
 }
