--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
     "handlebars.js": "~1.0.12",
-    "momentjs": "~2.2.1"
+    "momentjs": "~2.2.1",
+    "handlebars-latest.js": "http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-latest.js"
   },
   "devDependencies": {}
 }
