--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
     "time-grunt": "~0.1.1",
-    "grunt-contrib-handlebars": "~0.5.10"
+    "grunt-contrib-handlebars": "~0.5.10",
+    "grunt-rsync": "~0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
