--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "jquery": "~1.10.2",
     "handlebars.js": "~1.0.12",
     "momentjs": "~2.2.1",
-    "handlebars-latest.js": "http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-latest.js"
+    "handlebars-latest.js": "http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-latest.js",
+    "font-awesome": "~4.0.3"
   },
   "devDependencies": {}
 }
