Add deploy script to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ script:
  # We want to gate on passing tests and a successful build
  - bower install
  - grunt
+after_script:
+ # Deploy the app
+ - sh deploy.sh
