Fix broken travis build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - secure: Ow43+jp2Al+Y/AUVIbRxfjbqmAzQPv8U+wH38tqp27OeYM0iW6tIkEqyxBSTIA24HCBqrHvjuGEDxyLMruS90tx/9pybddzmMQxgTXD4wvzjNxTDvBFfKCA8VQDWwxwAELoAT8vLB3f4ovlZBWAGKkBHgVtzQ6hA2XhuXEw39ag=
   - GH_OWNER: josephspens
   - GH_PROJECT_NAME: josephspens.github.io
-install:
+before_script:
  # install dependencies
  - gem update --system
  - gem install compass
