Update config descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Joseph Spens
 email: jpspens@gmail.com
-description: My name is Joseph Spens, I am a Frontend Web Engineer living in New York City. I am currently a Software Engineer at Work Market and the Lead Web Developer at Space Advocates.
+description: My name is Joseph Spens, I am a Full Stack Technical Lead and Architect currently at Quartet in New York City. I'm also the lead organizer of Space Apps NYC.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://josephspens.github.io" # the base hostname & protocol for your site
 twitter_username: joespens
