--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: Joseph Spens
 email: jpspens@gmail.com
-description: My name is Joseph Spens, I am a Full Stack Technical Lead and Architect currently at Quartet in New York City. I'm also the lead organizer of Space Apps NYC.
+description: Hello world. The purpose of this site is to share an understanding of my personality, my ways of working, and my decision making strategies.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://josephspens.github.io" # the base hostname & protocol for your site
-twitter_username: joespens
 github_username: josephspens
 stack_overflow_username: 1824448/joseph-spens
 
